@@ -6,8 +6,12 @@ Bug numbers are references to bugs in http://www.achievo.org/bugzilla
 Changes in Achievo 0.9.2
 ------------------------
 + Added a cron script that sends reminders for todo's.
++ The search box in the top frame now works.
++ Added PIM API. All modules can now add information to the PIM screen.
++ Added Search API. All modules can now return searchresults when using the 
+  search feature from the topframe.
 * Reorganised Achievo codebase. Everything is now located in modules.
-* You can now no longer register time on nonactive project phases  (bug #51)
+* You can now no longer register time on nonactive project phases. (bug #51)
 * Security bugfix: Achievo releases 0.7.0 to 0.9.2 contain a vulnerability 
   that allows users to execute arbitrary code on any Achievo installation.
 * Updated German and Dutch language files.
